<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="#F2F2F2"
    android:padding="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp">
    <ImageView
        android:id="@+id/img_item_photo"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerCrop"
        tools:src="@android:color/darker_gray"
        android:contentDescription="@string/img_item_photo_content_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/img_item_photo"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_item_name"
            style="@style/Text.Field.Medium"
            android:layout_marginBottom="8dp"
            tools:text="@string/location_name"/>

        <TextView
            android:id="@+id/tv_item_detail"
            style="@style/Text.Content"
            android:ellipsize="end"
            android:maxLines="2"
            tools:text="@string/detail"/>
    </LinearLayout>
</RelativeLayout>